feat(controllers): include console log to check download plan

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# ZEKA_API_URL=https://zeka-api.brazilsouth.cloudapp.azure.com
-ZEKA_API_URL=http://localhost:3000
-PAGARME_API_URL=https://api.pagar.me/core/v5/orders
-PAGARME_API_KEY=sk_test_R9JDz0ncXIRePyqg
+TAMBORO_API_URL=https://alpha-zeka.tamboro.com.br/service/courses-history
